# rebel

./: environment.yml
cfvpy/: selfplay.py
csrc/liars_dice/: CMakeLists.txt  subgame_solving.cc
